# personal-utils

./: .gitignore  README.md  pyproject.toml
depreciated/: optics.py  sensing.py
orenge/: optimizer.py  sensing.py
orenge/optics/: analyzers.py  components.py  helpers.py  params.py  simulators.py
overengineering/: __init__.py  constants.py  general.py  nmr_sims.py  optics.py  optics_old.py  sensing.py
overengineering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
overengineering/optics/: __init__.py  analyzers.py  components.py  helpers.py  optics_old.py  params.py  quTools.py  simulators.py  tools.py
