[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overengineering"
version = "0.1.0"
description = "Personal utility functions for quantum computing"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sympy",
    "qutip",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
]

[tool.setuptools]
packages = ["overengineering"]

[tool.setuptools.package-data]
overengineering = ["*.py"]