[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overengineering_emmabacarra"
version = "0.1.0"
authors = [
  { name="Emma Bacarra", email="ebacarra1@gmail.com" },
]
description = "Personal utility functions for quantum computing"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sympy",
    "qutip",
    "ipython",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/emmabacarra/personal-utils"

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
overengineering = ["*.py"]